--- a/wp-content/themes/html5blank-stable/about.css
+++ b/wp-content/themes/html5blank-stable/about.css
@@ -22,7 +22,9 @@ body{
     background-color:#7a1501;
     text-align:center;
     font-family:sans-serif;
-
+    
+   
+     
 }
 
 header{
@@ -30,9 +32,11 @@ header{
     width:100%;
     height:26rem;  
     display:block;
-    background-color:white;
-    background-image:url("http://i.imgur.com/OpvA4Rr.jpg");
-    background-repeat:no-repeat;
+    background-color:white; 
+    z-index:-4;
+    position:relative;
+    
+   
     
 }
 
@@ -41,6 +45,7 @@ header{
     height:4rem;
     display:block;
     margin:0 auto;
+    width:60%;
     transform:translateX(3em);
     font-size:2em;
 }
@@ -55,10 +60,12 @@ header{
 }
 
 #imag{
-    width:13rem;
-    height:5rem;
-    transform:translateY(3em);
-    
+    margin:0 auto;
+    display:block;
+    transform:translateX(30em);
+    height:5em;
+    width:13em;
+  
 }
 
 ul{
@@ -68,6 +75,19 @@ ul{
     font-size:4rem
     
 }
+#own{
+    margin:0 auto;
+    display:block;
+    z-index:-3;
+    position:absolute;
+    width:100%;
+    text-align:left;
+    transform:translateY(-99em);
+    
+}
+
+
+
 li{
     margin:0 auto;
     display:inline-block;
@@ -119,10 +139,18 @@ h1{
 }
 #main_section{
     
-    line-height:5.5em;
-    font-size:55.2%;
+    color:#7a1501;
+    font-size:3px;
+    text-transform:uppercase;
+    z-index:-2;
+    position:absolute;
     
 }
+    /*margin: auto;*/
+    /*display:block;*/
+    /*font-size:45%;*/
+    
+
 /*#main_section{*/
 /*    width:auto;*/
 /*    float:left;*/
@@ -180,7 +208,7 @@ p{
     margin:0 auto;
     display:block;
     color:white;
-    font-size:3.3em;
+    font-size:2.8em;
 }
 #p{
     margin:0 auto;
@@ -202,6 +230,16 @@ em{
     color:#7a1501;
     font-size:2rem;
     text-transform:uppercase
+}
+#cover{
+    
+    width:100%;
+    margin:0 auto;
+    height:13rem;
+    color:#7a1501;
+    background-color:#7a1501; 
+
+
 }
 
 /*COMMENCE MEDIA */
