--- a/wp-content/themes/html5blank-stable/team.css
+++ b/wp-content/themes/html5blank-stable/team.css
@@ -25,11 +25,7 @@ body{
     background-color:#7a1501;
     text-align:center;
     font-family:sans-serif;
-    background-image: url(http://geekwiseacademy.com/img/owl-team.png);
-    background-repeat: no-repeat;
-    background-position: right top;
-    
-    
+   
 }
 
 /*header{*/
@@ -76,6 +72,18 @@ span>img{
     margin:0 auto;
     display:block;
     width:calc(100%/4);
+    
+}
+
+#team1{
+    
+    margin:0 auto;
+    display:block;
+    color:black;
+    width:100;
+    height:17em;
+    background-color:#fff;
+    transform:translateY(-10em);
     
 }
 
@@ -131,6 +139,15 @@ h1{
     text-transform:uppercase;
     font-size:3.6rem;
     transform:translateY(5rem);
+    
+}
+#owl{
+    
+    margin:0 auto;
+    display:block;
+    display:relative;
+    transform:translateY(-24em);
+    
     
 }
 
