--- a/wp-content/themes/html5blank-stable/team.css
+++ b/wp-content/themes/html5blank-stable/team.css
@@ -10,32 +10,33 @@
 
 html, body{
     margin: 0 auto;
-    padding:0;
+    height:auto;
     
 }
 
 body{
     
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    margin:0 auto;
+    padding:0;
     margin:0;
     width:100%;
-    height: 100%;
+    height:100%;
     background-color:#7a1501;
     text-align:center;
     font-family:sans-serif;
    
 }
 
-/*header{*/
+header{
     
-/*    width:100%;*/
-/*    display:block;*/
-/*    transform:translateY(-.6rem);*/
-/*    background-color:white;*/
+    width:100%;
+    height:30%;
+    display:block;
+    transform:translateY(-.6rem);
+    background-color:white;
  
-/*}*/
+}
+
 h3{
     margin:0 auto;
     display:block;
@@ -43,8 +44,6 @@ h3{
     color:#fff;
     
 }
-
-
 
 span>img{
     
@@ -57,7 +56,7 @@ span>img{
     
     display:block;
     margin:0 auto;
-    position: relative;
+    position:inherit;
     text-align:center;
     background-color:#fff;
     width:60%;
@@ -74,16 +73,29 @@ span>img{
     width:calc(100%/4);
     
 }
-
-#team1{
+.logo{
     
     margin:0 auto;
     display:block;
-    color:black;
-    width:100;
-    height:17em;
-    background-color:#fff;
-    transform:translateY(-10em);
+    transform:translateY(3);
+    
+}
+
+#team{
+    
+    margin:0 auto;
+    display:block;
+    width:100%;
+    text-align:center;
+    transform:translateY(-1em);
+    
+    /*margin:0 auto;*/
+    /*display:block;*/
+    /*color:black;*/
+    /*width:100;*/
+    /*height:17em;*/
+    /*background-color:#fff;*/
+    /*transform:translateY(-10em);*/
     
 }
 
@@ -136,17 +148,20 @@ a:hover{
 }
 
 h1{
+    
     text-transform:uppercase;
     font-size:3.6rem;
-    transform:translateY(5rem);
+    transform:translateY(-.6em);
     
 }
 #owl{
     
-    margin:0 auto;
+    margin-left:61em;
     display:block;
-    display:relative;
-    transform:translateY(-24em);
+    z-index:-2;
+    position:absolute;
+    transform:translateY(-22em);
+    
     
     
 }
@@ -188,6 +203,6 @@ main{
    margin:0 auto;
    float:left;
    padding-left:10em;
-   transform:translateY(-7.9em);
+   transform:translateY(-4.6em);
    
 }
