--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -9,6 +9,7 @@ html,body{
 body{
     margin: 0;
     padding: 0;
+    font-family:'Lato', sans-serif;
 }
 .fa{
     visibility:hidden;
@@ -97,7 +98,7 @@ a:hover{
 h2{
     position:relative;
     top:30px;
-    font-family:"franchise";
+    font-family:"franchise" sans-serif;
     font-size: 2.0em;
     text-align:center;
     margin:40px auto 0px auto;
@@ -108,16 +109,17 @@ h2{
 h3{
     position:relative;
     top:30px;
-    font-family:"ciria";
+    font-family:"ciria" sans-serif;
     font-size:2.0em;
     font-weight:100;
     text-align:center;
     margin:0 auto;
     width:59%;
     color:white;
-    font-weight:thin;
+    /*font-weight:thin;*/
     text-transform:lowercase;
 }
+
 
 
 /*THIS IS WHERE THE HEADER ENDS AND MAROONISH COLOR BEGINS AT BOTTOM*/
