--- a/wp-content/themes/html5blank-stable/team.css
+++ b/wp-content/themes/html5blank-stable/team.css
@@ -206,3 +206,15 @@ main{
    transform:translateY(-4.6em);
    
 }
+#content{
+    
+    margin:0 auto;
+    width:100%;
+    height:50%;
+    font-size:18px;
+    float:right;
+    padding:2em;
+    text-align:center;
+    transform:translateY(-9em);
+    
+}
