--- a/wp-content/themes/html5blank-stable/team.css
+++ b/wp-content/themes/html5blank-stable/team.css
@@ -9,30 +9,30 @@
 }
 
 html, body{
-    margin: 0 auto;
-    height:auto;
+    
+    margin:0;
+    padding:0S;
     
 }
 
 body{
     
-    margin:0 auto;
-    padding:0;
     margin:0;
+    display:block;
+    padding:0;
     width:100%;
-    height:100%;
     background-color:#7a1501;
     text-align:center;
-    font-family:sans-serif;
+    font-family:'Lato' sans-serif;
    
 }
 
 header{
     
     width:100%;
-    height:30%;
+    height:18em;
     display:block;
-    transform:translateY(-.6rem);
+    transform:translateY(-1em);
     background-color:white;
  
 }
@@ -64,6 +64,7 @@ span>img{
     height:auto;
    
 }
+
 .team-member-icon{
     
     margin:0 auto;
@@ -71,13 +72,6 @@ span>img{
     width:calc(100%/4);
     
 }
-/*.logo{*/
-    
-/*    margin:0 auto;*/
-/*    display:block;*/
-/*    transform:translateY(3);*/
-    
-/*}*/
 
 #team{
     
@@ -86,15 +80,7 @@ span>img{
     width:100%;
     text-align:center;
     transform:translateY(-1em);
-    
-    /*margin:0 auto;*/
-    /*display:block;*/
-    /*color:black;*/
-    /*width:100;*/
-    /*height:17em;*/
-    /*background-color:#fff;*/
-    /*transform:translateY(-10em);*/
-    
+
 }
 
 ul{
@@ -130,7 +116,6 @@ a{
 a:hover{
     
     color:#7a1501;
-/*    background-color:#f9da0c;*/
     transition: background 2s;
     
 }
@@ -148,10 +133,13 @@ a:hover{
 h1{
     
     text-transform:uppercase;
-    font-size:3.6rem;
-    transform:translateY(-.6em);
+    font-size:1.6rem;
+    padding:2em;
+    font-weight:900;
+    transform:translateY(1em);
     
 }
+
 #owl{
     
     margin-left:68em;
@@ -206,6 +194,7 @@ main{
    transform:translateY(-3.9em);
    
 }
+
 #content{
     
     margin:0 auto;
