lato font applied

--- a/wp-content/themes/html5blank-stable/cohort.css
+++ b/wp-content/themes/html5blank-stable/cohort.css
@@ -18,6 +18,7 @@ body{
     background-image: url(http://geekwiseacademy.com/img/owl-team.png);
     background-repeat: no-repeat;
     background-position: right top;
+    font-family:'Lato' sans-serif;
     margin: 0;
     padding: 0;
 }
