--- a/wp-content/themes/html5blank-stable/about.css
+++ b/wp-content/themes/html5blank-stable/about.css
@@ -20,7 +20,7 @@ body{
     width:100%;
     background-color:#7a1501;
     text-align:center;
-    font-family:sans-serif;
+    font-family:'Lato' sans-serif;
 
 }
 
