--- a/wp-content/themes/html5blank-stable/contact.css
+++ b/wp-content/themes/html5blank-stable/contact.css
@@ -19,7 +19,7 @@ body{
     margin:0;
     background-color:snow;
     text-align:center;
-    font-family:sans-serif;
+    font-family:'Lato' sans-serif;
    
 }
 
