--- a/wp-content/themes/html5blank-stable/courses.css
+++ b/wp-content/themes/html5blank-stable/courses.css
@@ -26,7 +26,7 @@ body{
     height:100%;
     background-color:white;
     text-align:center;
-    font-family:sans-serif;
+    font-family:'Lato' sans-serif;
     background-image:url(http://i.imgur.com/YZOVy0w.png);
     background-position:top right;
     background-repeat:no-repeat;
