--- a/wp-content/themes/html5blank-stable/jake.css
+++ b/wp-content/themes/html5blank-stable/jake.css
@@ -24,7 +24,7 @@ body{
     height:100%;
     background-color:#7a1501;
     text-align:center;
-    font-family:sans-serif;
+    font-family:'Lato' sans-serif;
 }
 
 header{
