--- a/wp-content/themes/html5blank-stable/terry.css
+++ b/wp-content/themes/html5blank-stable/terry.css
@@ -22,7 +22,7 @@ body{
     height: 100%;
     background-color:#7a1501;
     text-align:center;
-    font-family: sans-serif;
+    font-family:'Lato' sans-serif;
 }
 
 header{
