--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -23,7 +23,7 @@ body{
     height:100%;
     background-color:white;
     text-align:center;
-    font-family:sans-serif;
+    font-family:'Lato' sans-serif;
 }
 
 header{
@@ -79,10 +79,7 @@ ul{
     
     display:block;
     margin:0 auto;
-    
-    
-    
-    
+
 }
 
 li{
@@ -143,7 +140,6 @@ li a:hover{
 .sign a:hover{
     color:#7a1501;
 }
-
 
 span p{
     
