--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -99,7 +99,7 @@ h2{
     position:relative;
     top:30px;
     font-family:"franchise";
-    font-size: 2.0em;
+    font-size: 3.0em;
     text-align:center;
     margin:40px auto 0px auto;
     color:white;
@@ -109,7 +109,7 @@ h2{
 h3{
     position:relative;
     top:30px;
-    font-family:"ciria" !important;
+    /*font-family:"ciria" !important;*/
     font-size:2.0em;
     font-weight:100;
     text-align:center;
@@ -118,6 +118,11 @@ h3{
     color:white;
     /*font-weight:thin;*/
     text-transform:lowercase;
+}
+#teach{
+   
+   font-family:"ciria"; 
+    
 }
 
 /*THIS IS WHERE THE HEADER ENDS AND MAROONISH COLOR BEGINS AT BOTTOM*/
