--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -41,12 +41,11 @@ header{
     
     display:block;
     margin:1rem;
-    padding-left:25rem;
-    width:15rem;
+    transform:translateX(24em);
+    width:8rem;
     height:5rem;
     float:left;
-    
-    
+
 }
 
 .parent{
@@ -67,10 +66,11 @@ header{
 }
 
 
-em{
+p em{
     display:block;
     margin:0 auto;
-    transform:translateX(-14em);
+    transform:translateX(5em);
+    
     
     
 }
@@ -207,14 +207,15 @@ h2{
 /****IMAGE LOGO HERE****/
 
 
-#imag{
+/*#imag{*/
     
- margin:0 auto;
- display:block;
- text-align:center;
- width:100%;
+/* margin:0 auto;*/
+/* display:block;*/
+/* width:100%;*/
+/* font-size:15em;*/
+ 
 
-}
+/*}*/
 #second{
     
     display:block;
