--- a/wp-content/themes/html5blank-stable/courses.css
+++ b/wp-content/themes/html5blank-stable/courses.css
@@ -239,7 +239,9 @@ transform:translateY(-4em);
 }
 
 .btn{
-    width:4em;
+    width:5em;
+    padding:1em;
+    font-weight:bold;
     background-color:#f9da0c;
 }
 
