--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -91,6 +91,8 @@ a:hover{
 .geekwise{
     margin:0 auto;
     display:block;
+    width:100%;
+    float:left;
     transform:translateY(2.2em);
     
 }
